--- a/src/pages/PatientRecord/styles.css
+++ b/src/pages/PatientRecord/styles.css
@@ -161,12 +161,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #197fe5;
+    background: #003A70;
     border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #0459ae;
+    background: #0E84E3;
 }
 
 .patientRecord .patientHistory .tabContent h1,
